Wrote sets and parameters in the model
Sets and Parameters for the base optimization have been added in the model.

--- a/2. Code/Model.ipynb
+++ b/2. Code/Model.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Call the data from input csv's and generate sets"
+    "#Call the data from input csv's and generate sets\n",
+    "#The model iterates over a set of technologies, a set of storages, and a set of fuels that connects the two and serves the demand\n",
+    "\n",
+    "#Reading the csv's\n",
+    "technology = pd.read_csv('../1. Input/technologies.csv')\n",
+    "fuel = pd.read_csv('../1. Input/fuels.csv')\n",
+    "storage = pd.read_csv('../1. Input/storages.csv')\n",
+    "\n",
+    "#Creating sets\n",
+    "EM.Technology = pyo.Set(initialize = technology['technology'])\n",
+    "EM.Fuel = pyo.Set(initialize = fuel['fuel'])\n",
+    "EM.Storage = pyo.Set(initialize = storage['storage'])\n",
+    "EM.Hour = pyo.RangeSet(1,120,1)"
    ]
   },
   {
@@ -97,7 +109,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Call the data from input csv's and generate parameters"
+    "#Call the data from input csv's and generate parameters\n",
+    "#The model has the installed capacities of technologies and storages, their conversion ratios and efficiencies, and a demand profile\n",
+    "\n",
+    "#Reading the csv's\n",
+    "readin_variablecost = pd.read_csv('../1. Input/variablecost.csv', index_col=[0], sep=',').squeeze('columns')\n",
+    "readin_inputratio = pd.read_csv('../1. Input/inputratio.csv', index_col=[0,1], sep=',').squeeze('columns')\n",
+    "readin_outputratio = pd.read_csv('../1. Input/outputratio.csv', index_col=[0,1], sep=',').squeeze('columns')\n",
+    "readin_emissionratio = pd.read_csv('../1. Input/emissionratio.csv', index_col=[0], sep=',').squeeze('columns')\n",
+    "readin_maxcapacity = pd.read_csv('../1. Input/maxcapacity.csv', index_col=[0], sep=',').squeeze('columns')\n",
+    "readin_demandprofile = pd.read_csv('../1. Input/demand_timeseries.csv', index_col=[0,1], sep=',').squeeze('columns')\n",
+    "readin_capacityfactor = pd.read_csv('../1. Input/capacity_factors_2018.csv', index_col=[0,1], sep=',').squeeze('columns')\n",
+    "readin_tagdispatchabletechnology = pd.read_csv('../1. Input/tagdispatchabletechnology.csv', index_col=[0], sep=',').squeeze('columns')\n",
+    "readin_e2pratio = pd.read_csv('../1. Input/e2pratio.csv', index_col=[0], sep=',').squeeze('columns')\n",
+    "readin_storagechargeefficiency = pd.read_csv('../1. Input/storagechargeefficiency.csv', index_col=[0,1], sep=',').squeeze('columns')\n",
+    "readin_storagedischargeefficiency = pd.read_csv('../1. Input/storagedischargeefficiency.csv', index_col=[0,1], sep=',').squeeze('columns')\n",
+    "\n",
+    "#Creating parameters\n",
+    "EM.VariableCost = pyo.Param(EM.Technology, default=0, initialize=readin_variablecost)\n",
+    "EM.OutputRatio = pyo.Param(EM.Technology, EM.Fuel, default=0, initialize=readin_outputratio)\n",
+    "EM.InputRatio = pyo.Param(EM.Technology, EM.Fuel, default=0 , initialize=readin_inputratio)\n",
+    "EM.EmissionRatio = pyo.Param(EM.Technology, default=0, initialize=readin_emissionratio)\n",
+    "EM.MaxCapacity = pyo.Param(EM.Technology, default=999, initialize=readin_maxcapacity)\n",
+    "EM.DemandProfile = pyo.Param(EM.Fuel, EM.Hour, default=1/len(EM.Hour.data()), initialize=readin_demandprofile)\n",
+    "EM.CapacityFactor = pyo.Param(EM.Technology, EM.Hour, default=0, initialize=readin_capacityfactor, mutable=True)\n",
+    "EM.TagDispatchableTechnology = pyo.Param(EM.Technology, default=1, initialize=readin_tagdispatchabletechnology)\n",
+    "EM.E2PRatio = pyo.Param(EM.Storage, default=0, initialize=readin_e2pratio)\n",
+    "EM.StorageChargeEfficiency = pyo.Param(EM.Storage, EM.Fuel, default=0, initialize=readin_storagechargeefficiency)\n",
+    "EM.StorageDisChargeEfficiency = pyo.Param(EM.Storage, EM.Fuel, default=0, initialize=readin_storagedischargeefficiency)"
    ]
   },
   {
