Wrote variables to the model
Added variables of the model for base optimization

--- a/2. Code/Model.ipynb
+++ b/2. Code/Model.ipynb
@@ -152,7 +152,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Define the variables here"
+    "#Define the variables here\n",
+    "\n",
+    "#Creating the variables\n",
+    "EM.TotalCost = pyo.Var(EM.Technology, domain=pyo.NonNegativeReals)\n",
+    "EM.FuelProductionByTechnology = pyo.Var(EM.Hour, EM.Technology, EM.Fuel, domain=pyo.NonNegativeReals)\n",
+    "EM.Capacity = pyo.Var(EM.Technology, domain=pyo.NonNegativeReals)\n",
+    "EM.FuelUseByTechnology = pyo.Var(EM.Hour, EM.Technology, EM.Fuel, domain=pyo.NonNegativeReals)\n",
+    "EM.TechnologyEmissions = pyo.Var(EM.Technology)\n",
+    "EM.Curtailment = pyo.Var(EM.Hour,EM.Fuel, domain=pyo.NonNegativeReals)\n",
+    "EM.StorageEnergyCapacity = pyo.Var(EM.Storage,EM.Fuel, domain=pyo.NonNegativeReals) \n",
+    "EM.StorageCharge = pyo.Var(EM.Hour,EM.Storage,EM.Fuel, domain=pyo.NonNegativeReals) \n",
+    "EM.StorageDisCharge = pyo.Var(EM.Hour,EM.Storage,EM.Fuel, domain=pyo.NonNegativeReals) \n",
+    "EM.StorageLevel = pyo.Var(EM.Hour,EM.Storage,EM.Fuel, domain=pyo.NonNegativeReals) \n",
+    "EM.TotalStorageCost = pyo.Var(EM.Storage, domain=pyo.NonNegativeReals)\n"
    ]
   },
   {
