Wrote the objective function
Wrote the objective function of the base optimization case

--- a/2. Code/Model.ipynb
+++ b/2. Code/Model.ipynb
@@ -181,7 +181,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Define the objective function here"
+    "#Define the objective function here\n",
+    "#The objective is to minimize the total costs of the system\n",
+    "\n",
+    "def obj_function(ESM): \n",
+    "    return pyo.summation(EM.TotalCost)+pyo.summation(EM.TotalStorageCost)\n",
+    "\n",
+    "# create the objective object with the earlier created objective function\n",
+    "EM.obj = pyo.Objective(rule=obj_function)\n"
    ]
   },
   {
