Wrote constraint functions
Wrote constraint functions for the base optimization

--- a/2. Code/Model.ipynb
+++ b/2. Code/Model.ipynb
@@ -204,7 +204,102 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Define the constraint functions/expressions and create constraint objects"
+    "#Define the constraint functions/expressions and create constraint objects\n",
+    "\n",
+    "#Writing the constraint functions\n",
+    "def demand_adequacy(ESM,h,f): \n",
+    "    return (\n",
+    "        sum(EM.FuelProductionByTechnology[h,t,f] for t in EM.Technology) \n",
+    "        + sum(EM.StorageDisCharge[h,s,f] for s in EM.Storage if EM.StorageDisChargeEfficiency[s,f]>0) == \n",
+    "        EM.Demand[f]*EM.DemandProfile[f,h] \n",
+    "        + sum(EM.FuelUseByTechnology[h,t,f] for t in EM.Technology) \n",
+    "        + EM.Curtailment[h,f]\n",
+    "        + sum(EM.StorageCharge[h,s,f] for s in EM.Storage if EM.StorageDisChargeEfficiency[s,f]>0) \n",
+    "    )\n",
+    "        \n",
+    "def productioncost(ESM,t): \n",
+    "    return sum(EM.FuelProductionByTechnology[h,t,f] for f in EM.Fuel for h in EM.Hour) * EM.VariableCost[t] + EM.Capacity[t] * EM.CapitalCost[t] == EM.TotalCost[t]\n",
+    "\n",
+    "def productionfunction_dispatchable(ESM,h,t,f):\n",
+    "    if EM.TagDispatchableTechnology[t] > 0:\n",
+    "        return EM.OutputRatio[t,f] * EM.Capacity[t] * EM.CapacityFactor[t,h] >= EM.FuelProductionByTechnology[h,t,f]\n",
+    "    else:\n",
+    "        return pyo.Constraint.Skip\n",
+    "\n",
+    "def productionfunction_variable(ESM,h,t,f): \n",
+    "    if EM.TagDispatchableTechnology[t] == 0:\n",
+    "        return EM.OutputRatio[t,f] * EM.Capacity[t] * EM.CapacityFactor[t,h] == EM.FuelProductionByTechnology[h,t,f]\n",
+    "    else:\n",
+    "        return pyo.Constraint.Skip\n",
+    "    \n",
+    "def usefunction(ESM,h,t,f): \n",
+    "    return EM.InputRatio[t,f] * sum(EM.FuelProductionByTechnology[h,t,ff] for ff in EM.Fuel) == EM.FuelUseByTechnology[h,t,f]\n",
+    "\n",
+    "def technologyemissionfunction(ESM,t):\n",
+    "    return sum(EM.FuelProductionByTechnology[h,t,f] for f in EM.Fuel for h in EM.Hour) * EM.EmissionRatio[t] == EM.TechnologyEmissions[t]\n",
+    "\n",
+    "def emissionlimitconstraint(ESM):\n",
+    "    return sum(EM.TechnologyEmissions[t] for t in EM.Technology) <= EM.EmissionLimit\n",
+    "\n",
+    "def maxcapacityconstraint(ESM,t):\n",
+    "    return EM.Capacity[t] <= EM.MaxCapacity[t]\n",
+    "\n",
+    "def storagechargefunction(ESM,s,h,f): \n",
+    "    if EM.StorageDisChargeEfficiency[s,f] > 0:\n",
+    "        return EM.StorageCharge[h,s,f] <= EM.StorageEnergyCapacity[s,f]/EM.E2PRatio[s]\n",
+    "    else:\n",
+    "        return pyo.Constraint.Skip\n",
+    "\n",
+    "def storagedischargefunction(ESM,s,h,f): \n",
+    "    if EM.StorageDisChargeEfficiency[s,f] > 0:\n",
+    "        return EM.StorageDisCharge[h,s,f] <= EM.StorageEnergyCapacity[s,f]/EM.E2PRatio[s]\n",
+    "    else:\n",
+    "        return pyo.Constraint.Skip\n",
+    "\n",
+    "def storagelevelfunction(ESM,s,h,f): \n",
+    "    if EM.StorageDisChargeEfficiency[s,f] > 0 and h>1:\n",
+    "        return EM.StorageLevel[h,s,f] == EM.StorageLevel[h-1,s,f] + EM.StorageCharge[h,s,f]*EM.StorageChargeEfficiency[s,f] - EM.StorageDisCharge[h,s,f]/EM.StorageDisChargeEfficiency[s,f]\n",
+    "    else:\n",
+    "        return pyo.Constraint.Skip\n",
+    "\n",
+    "def storagelevelstartfunction(ESM,s,h,f): \n",
+    "    if EM.StorageDisChargeEfficiency[s,f] > 0 and h==1:\n",
+    "        return EM.StorageLevel[h,s,f] == 0.5*EM.StorageEnergyCapacity[s,f] + EM.StorageCharge[h,s,f]*EM.StorageChargeEfficiency[s,f] - EM.StorageDisCharge[h,s,f]/EM.StorageDisChargeEfficiency[s,f]\n",
+    "    else:\n",
+    "        return pyo.Constraint.Skip\n",
+    "\n",
+    "def maxstoragelevelfunction(ESM,s,h,f): \n",
+    "    if EM.StorageDisChargeEfficiency[s,f] > 0:\n",
+    "        return EM.StorageLevel[h,s,f] <= EM.StorageEnergyCapacity[s,f]\n",
+    "    else:\n",
+    "        return pyo.Constraint.Skip\n",
+    "    \n",
+    "def storagecostfunction(ESM,s): \n",
+    "        return EM.TotalStorageCost[s] == sum(EM.StorageEnergyCapacity[s,f]*EM.InvestmentCostStorage[s] for f in EM.Fuel)\n",
+    "\n",
+    "\n",
+    "def storageannualbalancefunction(ESM,s,f): \n",
+    "    if EM.StorageDisChargeEfficiency[s,f] > 0:\n",
+    "        return sum(EM.StorageCharge[h,s,f] for h in EM.Hour)*EM.StorageChargeEfficiency[s,f] - sum(EM.StorageDisCharge[h,s,f] for h in EM.Hour) / EM.StorageDisChargeEfficiency[s,f] == 0\n",
+    "    else:\n",
+    "        return pyo.Constraint.Skip\n",
+    "    \n",
+    "#Creating the constraint objects\n",
+    "EM.DemandAdequacy = pyo.Constraint(EM.Hour,EM.Fuel, rule=demand_adequacy)\n",
+    "EM.ProductionCost = pyo.Constraint(EM.Technology, rule=productioncost)\n",
+    "EM.ProductionFunction_disp = pyo.Constraint(EM.Hour,EM.Technology, EM.Fuel, rule=productionfunction_dispatchable)\n",
+    "EM.ProductionFunction_res = pyo.Constraint(EM.Hour,EM.Technology, EM.Fuel, rule=productionfunction_variable)\n",
+    "EM.UseFunction = pyo.Constraint(EM.Hour,EM.Technology, EM.Fuel, rule=usefunction)\n",
+    "EM.TechnologyEmissionFunction = pyo.Constraint(EM.Technology, rule=technologyemissionfunction)\n",
+    "EM.EmissionLimitConstraint = pyo.Constraint(rule=emissionlimitconstraint)\n",
+    "EM.MaxCapacityConstraint = pyo.Constraint(EM.Technology, rule=maxcapacityconstraint)\n",
+    "EM.StorageChargeFunction = pyo.Constraint(EM.Storage,EM.Hour,EM.Fuel, rule=storagechargefunction)\n",
+    "EM.StorageDisChargeFunction = pyo.Constraint(EM.Storage,EM.Hour,EM.Fuel, rule=storagedischargefunction)\n",
+    "EM.StorageLevelFunction = pyo.Constraint(EM.Storage,EM.Hour,EM.Fuel, rule=storagelevelfunction)\n",
+    "EM.StorageLevelStartFunction = pyo.Constraint(EM.Storage,EM.Hour,EM.Fuel, rule=storagelevelstartfunction)\n",
+    "EM.MaxStorageLevelFunction = pyo.Constraint(EM.Storage,EM.Hour,EM.Fuel, rule=maxstoragelevelfunction)\n",
+    "EM.StorageCostFunction = pyo.Constraint(EM.Storage, rule=storagecostfunction)\n",
+    "EM.StorageAnnualBalanceFunction = pyo.Constraint(EM.Storage,EM.Fuel, rule=storageannualbalancefunction)"
    ]
   },
   {
