--- a/2. Code/Model.ipynb
+++ b/2. Code/Model.ipynb
@@ -64,7 +64,6 @@
     "#Initiate the model\n",
     "\n",
     "#Naming the model 'EM' -- stands for Energy Model\n",
-    "\n",
     "EM = pyo.AbstractModel()"
    ]
   },
@@ -315,7 +314,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Create the instance of the model here"
+    "#Create the instance of the model here\n",
+    "instance = EM.create_instance()\n"
    ]
   },
   {
@@ -331,7 +331,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Define the solver here"
+    "#Define the solver here\n",
+    "opt = pyo.SolverFactory('cbc')\n",
+    "\n",
+    "#Solve the model through the instance of the model\n",
+    "opt.solve(instance)"
    ]
   },
   {
@@ -347,7 +351,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Solve the model here and display results"
+    "#Display results\n",
+    "instance.display()"
    ]
   },
   {
