Updated the objective function and the constraints
Added total demand, removed storage costs from the objective function, and excluded capital costs from the costs function

--- a/2. Code/Model.ipynb
+++ b/2. Code/Model.ipynb
@@ -115,6 +115,7 @@
     "readin_variablecost = pd.read_csv('../1. Input/variablecost.csv', index_col=[0], sep=',').squeeze('columns')\n",
     "readin_inputratio = pd.read_csv('../1. Input/inputratio.csv', index_col=[0,1], sep=',').squeeze('columns')\n",
     "readin_outputratio = pd.read_csv('../1. Input/outputratio.csv', index_col=[0,1], sep=',').squeeze('columns')\n",
+    "readin_demand = pd.read_csv('../1. Input/demand.csv', index_col=[0], sep=',').squeeze('columns')\n",
     "readin_emissionratio = pd.read_csv('../1. Input/emissionratio.csv', index_col=[0], sep=',').squeeze('columns')\n",
     "readin_maxcapacity = pd.read_csv('../1. Input/maxcapacity.csv', index_col=[0], sep=',').squeeze('columns')\n",
     "readin_demandprofile = pd.read_csv('../1. Input/demand_timeseries.csv', index_col=[0,1], sep=',').squeeze('columns')\n",
@@ -128,6 +129,7 @@
     "EM.VariableCost = pyo.Param(EM.Technology, default=0, initialize=readin_variablecost)\n",
     "EM.OutputRatio = pyo.Param(EM.Technology, EM.Fuel, default=0, initialize=readin_outputratio)\n",
     "EM.InputRatio = pyo.Param(EM.Technology, EM.Fuel, default=0 , initialize=readin_inputratio)\n",
+    "EM.Demand = pyo.Param(EM.Fuel, default =0, initialize=readin_demand)\n",
     "EM.EmissionRatio = pyo.Param(EM.Technology, default=0, initialize=readin_emissionratio)\n",
     "EM.MaxCapacity = pyo.Param(EM.Technology, default=999, initialize=readin_maxcapacity)\n",
     "EM.DemandProfile = pyo.Param(EM.Fuel, EM.Hour, default=1/len(EM.Hour.data()), initialize=readin_demandprofile)\n",
@@ -135,7 +137,8 @@
     "EM.TagDispatchableTechnology = pyo.Param(EM.Technology, default=1, initialize=readin_tagdispatchabletechnology)\n",
     "EM.E2PRatio = pyo.Param(EM.Storage, default=0, initialize=readin_e2pratio)\n",
     "EM.StorageChargeEfficiency = pyo.Param(EM.Storage, EM.Fuel, default=0, initialize=readin_storagechargeefficiency)\n",
-    "EM.StorageDisChargeEfficiency = pyo.Param(EM.Storage, EM.Fuel, default=0, initialize=readin_storagedischargeefficiency)"
+    "EM.StorageDisChargeEfficiency = pyo.Param(EM.Storage, EM.Fuel, default=0, initialize=readin_storagedischargeefficiency)\n",
+    "EM.EmissionLimit = pyo.Param(initialize=2500)"
    ]
   },
   {
@@ -183,8 +186,8 @@
     "#Define the objective function here\n",
     "#The objective is to minimize the total costs of the system\n",
     "\n",
-    "def obj_function(ESM): \n",
-    "    return pyo.summation(EM.TotalCost)+pyo.summation(EM.TotalStorageCost)\n",
+    "def obj_function(EM): \n",
+    "    return pyo.summation(EM.TotalCost) #+pyo.summation(EM.TotalStorageCost)\n",
     "\n",
     "# create the objective object with the earlier created objective function\n",
     "EM.obj = pyo.Objective(rule=obj_function)\n"
@@ -206,7 +209,7 @@
     "#Define the constraint functions/expressions and create constraint objects\n",
     "\n",
     "#Writing the constraint functions\n",
-    "def demand_adequacy(ESM,h,f): \n",
+    "def demand_adequacy(EM,h,f): \n",
     "    return (\n",
     "        sum(EM.FuelProductionByTechnology[h,t,f] for t in EM.Technology) \n",
     "        + sum(EM.StorageDisCharge[h,s,f] for s in EM.Storage if EM.StorageDisChargeEfficiency[s,f]>0) == \n",
@@ -216,68 +219,68 @@
     "        + sum(EM.StorageCharge[h,s,f] for s in EM.Storage if EM.StorageDisChargeEfficiency[s,f]>0) \n",
     "    )\n",
     "        \n",
-    "def productioncost(ESM,t): \n",
-    "    return sum(EM.FuelProductionByTechnology[h,t,f] for f in EM.Fuel for h in EM.Hour) * EM.VariableCost[t] + EM.Capacity[t] * EM.CapitalCost[t] == EM.TotalCost[t]\n",
+    "def productioncost(EM,t): \n",
+    "    return sum(EM.FuelProductionByTechnology[h,t,f] for f in EM.Fuel for h in EM.Hour) * EM.VariableCost[t] == EM.TotalCost[t]\n",
     "\n",
-    "def productionfunction_dispatchable(ESM,h,t,f):\n",
+    "def productionfunction_dispatchable(EM,h,t,f):\n",
     "    if EM.TagDispatchableTechnology[t] > 0:\n",
     "        return EM.OutputRatio[t,f] * EM.Capacity[t] * EM.CapacityFactor[t,h] >= EM.FuelProductionByTechnology[h,t,f]\n",
     "    else:\n",
     "        return pyo.Constraint.Skip\n",
     "\n",
-    "def productionfunction_variable(ESM,h,t,f): \n",
+    "def productionfunction_variable(EM,h,t,f): \n",
     "    if EM.TagDispatchableTechnology[t] == 0:\n",
     "        return EM.OutputRatio[t,f] * EM.Capacity[t] * EM.CapacityFactor[t,h] == EM.FuelProductionByTechnology[h,t,f]\n",
     "    else:\n",
     "        return pyo.Constraint.Skip\n",
     "    \n",
-    "def usefunction(ESM,h,t,f): \n",
+    "def usefunction(EM,h,t,f): \n",
     "    return EM.InputRatio[t,f] * sum(EM.FuelProductionByTechnology[h,t,ff] for ff in EM.Fuel) == EM.FuelUseByTechnology[h,t,f]\n",
     "\n",
-    "def technologyemissionfunction(ESM,t):\n",
+    "def technologyemissionfunction(EM,t):\n",
     "    return sum(EM.FuelProductionByTechnology[h,t,f] for f in EM.Fuel for h in EM.Hour) * EM.EmissionRatio[t] == EM.TechnologyEmissions[t]\n",
     "\n",
-    "def emissionlimitconstraint(ESM):\n",
+    "def emissionlimitconstraint(EM):\n",
     "    return sum(EM.TechnologyEmissions[t] for t in EM.Technology) <= EM.EmissionLimit\n",
     "\n",
-    "def maxcapacityconstraint(ESM,t):\n",
+    "def maxcapacityconstraint(EM,t):\n",
     "    return EM.Capacity[t] <= EM.MaxCapacity[t]\n",
     "\n",
-    "def storagechargefunction(ESM,s,h,f): \n",
+    "def storagechargefunction(EM,s,h,f): \n",
     "    if EM.StorageDisChargeEfficiency[s,f] > 0:\n",
     "        return EM.StorageCharge[h,s,f] <= EM.StorageEnergyCapacity[s,f]/EM.E2PRatio[s]\n",
     "    else:\n",
     "        return pyo.Constraint.Skip\n",
     "\n",
-    "def storagedischargefunction(ESM,s,h,f): \n",
+    "def storagedischargefunction(EM,s,h,f): \n",
     "    if EM.StorageDisChargeEfficiency[s,f] > 0:\n",
     "        return EM.StorageDisCharge[h,s,f] <= EM.StorageEnergyCapacity[s,f]/EM.E2PRatio[s]\n",
     "    else:\n",
     "        return pyo.Constraint.Skip\n",
     "\n",
-    "def storagelevelfunction(ESM,s,h,f): \n",
+    "def storagelevelfunction(EM,s,h,f): \n",
     "    if EM.StorageDisChargeEfficiency[s,f] > 0 and h>1:\n",
     "        return EM.StorageLevel[h,s,f] == EM.StorageLevel[h-1,s,f] + EM.StorageCharge[h,s,f]*EM.StorageChargeEfficiency[s,f] - EM.StorageDisCharge[h,s,f]/EM.StorageDisChargeEfficiency[s,f]\n",
     "    else:\n",
     "        return pyo.Constraint.Skip\n",
     "\n",
-    "def storagelevelstartfunction(ESM,s,h,f): \n",
+    "def storagelevelstartfunction(EM,s,h,f): \n",
     "    if EM.StorageDisChargeEfficiency[s,f] > 0 and h==1:\n",
     "        return EM.StorageLevel[h,s,f] == 0.5*EM.StorageEnergyCapacity[s,f] + EM.StorageCharge[h,s,f]*EM.StorageChargeEfficiency[s,f] - EM.StorageDisCharge[h,s,f]/EM.StorageDisChargeEfficiency[s,f]\n",
     "    else:\n",
     "        return pyo.Constraint.Skip\n",
     "\n",
-    "def maxstoragelevelfunction(ESM,s,h,f): \n",
+    "def maxstoragelevelfunction(EM,s,h,f): \n",
     "    if EM.StorageDisChargeEfficiency[s,f] > 0:\n",
     "        return EM.StorageLevel[h,s,f] <= EM.StorageEnergyCapacity[s,f]\n",
     "    else:\n",
     "        return pyo.Constraint.Skip\n",
     "    \n",
-    "def storagecostfunction(ESM,s): \n",
-    "        return EM.TotalStorageCost[s] == sum(EM.StorageEnergyCapacity[s,f]*EM.InvestmentCostStorage[s] for f in EM.Fuel)\n",
+    "#def storagecostfunction(EM,s): \n",
+    " #       return EM.TotalStorageCost[s] == sum(EM.StorageEnergyCapacity[s,f]*EM.InvestmentCostStorage[s] for f in EM.Fuel)\n",
     "\n",
     "\n",
-    "def storageannualbalancefunction(ESM,s,f): \n",
+    "def storageannualbalancefunction(EM,s,f): \n",
     "    if EM.StorageDisChargeEfficiency[s,f] > 0:\n",
     "        return sum(EM.StorageCharge[h,s,f] for h in EM.Hour)*EM.StorageChargeEfficiency[s,f] - sum(EM.StorageDisCharge[h,s,f] for h in EM.Hour) / EM.StorageDisChargeEfficiency[s,f] == 0\n",
     "    else:\n",
@@ -297,7 +300,7 @@
     "EM.StorageLevelFunction = pyo.Constraint(EM.Storage,EM.Hour,EM.Fuel, rule=storagelevelfunction)\n",
     "EM.StorageLevelStartFunction = pyo.Constraint(EM.Storage,EM.Hour,EM.Fuel, rule=storagelevelstartfunction)\n",
     "EM.MaxStorageLevelFunction = pyo.Constraint(EM.Storage,EM.Hour,EM.Fuel, rule=maxstoragelevelfunction)\n",
-    "EM.StorageCostFunction = pyo.Constraint(EM.Storage, rule=storagecostfunction)\n",
+    "#EM.StorageCostFunction = pyo.Constraint(EM.Storage, rule=storagecostfunction)\n",
     "EM.StorageAnnualBalanceFunction = pyo.Constraint(EM.Storage,EM.Fuel, rule=storageannualbalancefunction)"
    ]
   },
