Added residual capacities to the base optimization
Residual capacities have been added to the model

--- a/2. Code/Model.ipynb
+++ b/2. Code/Model.ipynb
@@ -268,7 +268,7 @@
     "    return sum(EM.TechnologyEmissions[t] for t in EM.Technology) <= EM.EmissionLimit\n",
     "\n",
     "def maxcapacityconstraint(EM,t):\n",
-    "    return EM.Capacity[t] <= EM.MaxCapacity[t]\n",
+    "    return EM.Capacity[t] + EM.ResidualCapacity[t] <= EM.MaxCapacity[t]\n",
     "\n",
     "def storagechargefunction(EM,s,h,f): \n",
     "    if EM.StorageDisChargeEfficiency[s,f] > 0:\n",
