Wrote code for results

--- a/2. Code/Model.ipynb
+++ b/2. Code/Model.ipynb
@@ -9988,11 +9988,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Extract the data from the solution to export results"
+    "#Extract the data from the solution to export results\n",
+    "\n",
+    "#we need the demand profiles of all fuels, even those where we did not give a default value\n",
+    "demandprofile = pd.Series(instance.DemandProfile.extract_values(),name='value',index=pd.MultiIndex.from_tuples(instance.DemandProfile.extract_values().keys(),names=['fuel', 'hour']))\n",
+    "\n",
+    "# generate data frames out of our results\n",
+    "ProductionByTechnology = pd.DataFrame(instance.FuelProductionByTechnology.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.FuelProductionByTechnology.extract_values().keys(), names=('Hour','Technology', 'Fuel')), columns=['Value']).reset_index()\n",
+    "Capacity = pd.DataFrame(instance.Capacity.extract_values().values(), index=(instance.Capacity.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()\n",
+    "Demand = pd.DataFrame(readin_demand * demandprofile *(-1), columns=['value']).reset_index().rename(columns={'fuel': 'Fuel', 'hour': 'Hour', 'value' : 'Value'})\n",
+    "Use = pd.DataFrame(instance.FuelUseByTechnology.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.FuelUseByTechnology.extract_values().keys(), names=('Hour','Technology', 'Fuel')), columns=['Value']).reset_index()\n",
+    "Curtailment = pd.DataFrame(instance.Curtailment.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.Curtailment.extract_values().keys(), names=('Hour','Fuel')), columns=['Value']).reset_index()\n",
+    "StorageLevel = pd.DataFrame(instance.StorageLevel.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.StorageLevel.extract_values().keys(), names=('Hour','Storage','Fuel')), columns=['Value']).reset_index().fillna(0)\n",
+    "\n",
+    "#let's add outputs for our storage flows\n",
+    "StorageCharge = pd.DataFrame(instance.StorageCharge.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.StorageCharge.extract_values().keys(), names=('Hour','Technology','Fuel')), columns=['Value']).reset_index().fillna(0)\n",
+    "StorageDisCharge = pd.DataFrame(instance.StorageDisCharge.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.StorageDisCharge.extract_values().keys(), names=('Hour','Technology','Fuel')), columns=['Value']).reset_index().fillna(0)\n",
+    "\n",
+    "# make sure that the values for Curtailment and Use are negative for our outputs\n",
+    "Use['Value']= Use['Value']*-1\n",
+    "Curtailment['Value']= Curtailment['Value']*-1\n",
+    "StorageCharge['Value']= StorageCharge['Value']*-1\n",
+    "\n",
+    "# combine all values for Production, Use, Demand, and Curtailment into one data frame\n",
+    "EnergyBalance = pd.concat([ProductionByTechnology,Use], ignore_index=True)\n",
+    "EnergyBalance = pd.concat([EnergyBalance,Demand], ignore_index=True)\n",
+    "EnergyBalance['Technology'] = EnergyBalance['Technology'].fillna('Demand')\n",
+    "EnergyBalance = pd.concat([EnergyBalance,Curtailment], ignore_index=True)\n",
+    "EnergyBalance['Technology'] = EnergyBalance['Technology'].fillna('Curtailment')\n",
+    "EnergyBalance = pd.concat([EnergyBalance,StorageCharge], ignore_index=True)\n",
+    "EnergyBalance = pd.concat([EnergyBalance,StorageDisCharge], ignore_index=True)\n",
+    "\n",
+    "# write our output values to csv files in the output subfolder\n",
+    "EnergyBalance.to_csv('../3. Output/EnergyBalance.csv',index=False)\n",
+    "Capacity.to_csv('../3. Output/Capacity.csv',index=False)\n",
+    "StorageLevel.to_csv('../3. Output/StorageLevel.csv',index=False)"
    ]
   },
   {
