Removed residual capacity - wrongly coded

--- a/2. Code/Model.ipynb
+++ b/2. Code/Model.ipynb
@@ -270,7 +270,7 @@
     "    return sum(EM.TechnologyEmissions[t] for t in EM.Technology) <= EM.EmissionLimit\n",
     "\n",
     "def maxcapacityconstraint(EM,t):\n",
-    "    return EM.Capacity[t] + EM.ResidualCapacity[t] <= EM.MaxCapacity[t]\n",
+    "    return EM.Capacity[t] <= EM.MaxCapacity[t]\n",
     "\n",
     "def storagechargefunction(EM,s,h,f): \n",
     "    if EM.StorageDisChargeEfficiency[s,f] > 0:\n",
@@ -304,7 +304,6 @@
     "    \n",
     "def storagecostfunction(EM,s): \n",
     "        return EM.TotalStorageCost[s] == sum(EM.StorageEnergyCapacity[s,f]*EM.InvestmentCostStorage[s] for f in EM.Fuel)\n",
-    "\n",
     "\n",
     "def storageannualbalancefunction(EM,s,f): \n",
     "    if EM.StorageDisChargeEfficiency[s,f] > 0:\n",
