Added parameters and input files
 for residualcapacity and residualcapacitystorages

--- a/2. Code/Model.ipynb
+++ b/2. Code/Model.ipynb
@@ -30,16 +30,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. Base Optimization Model\n",
+    "### 1. Base Case\n",
     "\n",
-    "##### (Define the existing configuration of the model here)"
+    "##### (With current capacities and no new installed capacities, we look at the emissions and the demand not covered)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Enter your code here and before 2. for Base Optimization Model"
+    "##### Enter your code here and before 2. for Base Case"
    ]
   },
   {
@@ -127,6 +127,7 @@
     "readin_investmentcost = pd.read_csv('../1. Input/investmentcost.csv', index_col=[0], sep=',').squeeze('columns')\n",
     "readin_investmentcoststorage = pd.read_csv('../1. Input//investmentcoststorage.csv', index_col=[0], sep=',').squeeze('columns')\n",
     "readin_residualcapacity = pd.read_csv('../1. Input/residualcapacity.csv', index_col=[0], sep=',').squeeze('columns')\n",
+    "readin_residualcapacitystorage = pd.read_csv('../1. Input/residualcapacitystorage.csv', index_col=[0], sep=',').squeeze('columns')\n",
     "\n",
     "#Creating parameters\n",
     "EM.VariableCost = pyo.Param(EM.Technology, default=0, initialize=readin_variablecost)\n",
@@ -144,7 +145,8 @@
     "EM.EmissionLimit = pyo.Param(initialize=999999)\n",
     "EM.CapitalCost = pyo.Param(EM.Technology, default=0, initialize=readin_investmentcost)\n",
     "EM.InvestmentCostStorage = pyo.Param(EM.Storage, default=0, initialize=readin_investmentcoststorage)\n",
-    "EM.ResidualCapacity = pyo.Param(EM.Technology,default=0,initialize=readin_residualcapacity)"
+    "EM.ResidualCapacity = pyo.Param(EM.Technology,default=0,initialize=readin_residualcapacity)\n",
+    "EM.ResidualCapacityStorage = pyo.Param(EM.Storage, default=0,initialize=readin_residualcapacitystorage)"
    ]
   },
   {
