--- a/2. Code/Model.ipynb
+++ b/2. Code/Model.ipynb
@@ -11487,14 +11487,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. Future Scenarios\n",
+    "### 2. Reverse Base Case\n",
     "\n",
-    "###### (Define the modelled scenario here)"
+    "###### (We let the system build new capacities on top of existing capacities such that the demand sectors are all met)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 540,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Enter your code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Future Business As Usual\n",
+    "\n",
+    "###### (We expand the reverse base case across 15 years)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Enter your code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. Future with Energy Efficiency Measures\n",
+    "\n",
+    "###### (We expand the reverse base case across 15 years)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Enter your code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. Future with Peak-shifting\n",
+    "\n",
+    "###### (We expand the reverse base case across 15 years)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
