Added residual capacity with new capacity
Called the constraint function 'Total Capacity'

--- a/2. Code/Model.ipynb
+++ b/2. Code/Model.ipynb
@@ -243,19 +243,22 @@
     "        + EM.Curtailment[h,f]\n",
     "        + sum(EM.StorageCharge[h,s,f] for s in EM.Storage if EM.StorageDisChargeEfficiency[s,f]>0) \n",
     "    )\n",
+    "\n",
+    "def totalcapacity(EM,t):\n",
+    "    return EM.TotalCapacity[t] == EM.ResidualCapacity[t] + EM.Capacity[t]\n",
     "        \n",
     "def productioncost(EM,t): \n",
     "    return sum(EM.FuelProductionByTechnology[h,t,f] for f in EM.Fuel for h in EM.Hour) * EM.VariableCost[t] + EM.Capacity[t] * EM.CapitalCost[t] == EM.TotalCost[t]\n",
     "\n",
     "def productionfunction_dispatchable(EM,h,t,f):\n",
     "    if EM.TagDispatchableTechnology[t] > 0:\n",
-    "        return EM.OutputRatio[t,f] * EM.Capacity[t] * EM.CapacityFactor[t,h] >= EM.FuelProductionByTechnology[h,t,f]\n",
+    "        return EM.OutputRatio[t,f] * EM.TotalCapacity[t] * EM.CapacityFactor[t,h] >= EM.FuelProductionByTechnology[h,t,f]\n",
     "    else:\n",
     "        return pyo.Constraint.Skip\n",
     "\n",
     "def productionfunction_variable(EM,h,t,f): \n",
     "    if EM.TagDispatchableTechnology[t] == 0:\n",
-    "        return EM.OutputRatio[t,f] * EM.Capacity[t] * EM.CapacityFactor[t,h] == EM.FuelProductionByTechnology[h,t,f]\n",
+    "        return EM.OutputRatio[t,f] * EM.TotalCapacity[t] * EM.CapacityFactor[t,h] == EM.FuelProductionByTechnology[h,t,f]\n",
     "    else:\n",
     "        return pyo.Constraint.Skip\n",
     "    \n",
@@ -269,7 +272,7 @@
     "    return sum(EM.TechnologyEmissions[t] for t in EM.Technology) <= EM.EmissionLimit\n",
     "\n",
     "def maxcapacityconstraint(EM,t):\n",
-    "    return EM.Capacity[t] <= EM.MaxCapacity[t]\n",
+    "    return EM.TotalCapacity[t] <= EM.MaxCapacity[t]\n",
     "\n",
     "def storagechargefunction(EM,s,h,f): \n",
     "    if EM.StorageDisChargeEfficiency[s,f] > 0:\n",
@@ -333,6 +336,7 @@
     "EM.MaxStorageLevelFunction = pyo.Constraint(EM.Storage,EM.Hour,EM.Fuel, rule=maxstoragelevelfunction)\n",
     "EM.StorageCostFunction = pyo.Constraint(EM.Storage, rule=storagecostfunction)\n",
     "EM.StorageAnnualBalanceFunction = pyo.Constraint(EM.Storage,EM.Fuel, rule=storageannualbalancefunction)\n",
+    "EM.TotalCapacity = pyo.Constraint(EM.Technology, rule=totalcapacity)\n",
     "#EM.BatterySOCFunction = pyo.Constraint(EM.Storage, EM.Hour, EM.Fuel, rule=batterySOCfunction)\n"
    ]
   },
