Changed emission limit to 0
Still, no expansion is seen in the capacities of renewables which indicates that current capacities are enough to meet power, cooking and mobility demands. However, curtailment is still seen throughout the year.

--- a/2. Code/Model.ipynb
+++ b/2. Code/Model.ipynb
@@ -142,7 +142,7 @@
     "EM.E2PRatio = pyo.Param(EM.Storage, default=0, initialize=readin_e2pratio)\n",
     "EM.StorageChargeEfficiency = pyo.Param(EM.Storage, EM.Fuel, default=0, initialize=readin_storagechargeefficiency)\n",
     "EM.StorageDisChargeEfficiency = pyo.Param(EM.Storage, EM.Fuel, default=0, initialize=readin_storagedischargeefficiency)\n",
-    "EM.EmissionLimit = pyo.Param(initialize=999999)\n",
+    "EM.EmissionLimit = pyo.Param(initialize=0)\n",
     "EM.CapitalCost = pyo.Param(EM.Technology, default=0, initialize=readin_investmentcost)\n",
     "EM.InvestmentCostStorage = pyo.Param(EM.Storage, default=0, initialize=readin_investmentcoststorage)\n",
     "EM.ResidualCapacity = pyo.Param(EM.Technology,default=0,initialize=readin_residualcapacity)\n",
@@ -11958,7 +11958,7 @@
    ],
    "source": [
     "#Display results\n",
-    "instance.display()"
+    "#instance.display()"
    ]
   },
   {
