Refined the csvs

--- a/2. Code/Model.ipynb
+++ b/2. Code/Model.ipynb
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,10 +448,13 @@
     "Use = pd.DataFrame(instance.FuelUseByTechnology.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.FuelUseByTechnology.extract_values().keys(), names=('Hour','Technology', 'Fuel')), columns=['Value']).reset_index()\n",
     "Curtailment = pd.DataFrame(instance.Curtailment.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.Curtailment.extract_values().keys(), names=('Hour','Fuel')), columns=['Value']).reset_index()\n",
     "StorageLevel = pd.DataFrame(instance.StorageLevel.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.StorageLevel.extract_values().keys(), names=('Hour','Storage','Fuel')), columns=['Value']).reset_index().fillna(0)\n",
+    "TotalCapacity = pd.DataFrame(instance.TotalCapacity.extract_values().values(), index=(instance.TotalCapacity.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()\n",
+    "TotalStorageCapacity = (pd.DataFrame(instance.TotalStorageCapacity.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.TotalStorageCapacity.extract_values().keys(), names=('Storage', 'Fuel')), columns=['Value']).reset_index().dropna()).drop('Fuel', axis=1).reset_index()\n",
+    "GenerationCapacity = TotalCapacity.iloc[0:5,:]\n",
     "\n",
     "#let's add outputs for our storage flows\n",
     "StorageCharge = pd.DataFrame(instance.StorageCharge.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.StorageCharge.extract_values().keys(), names=('Hour','Technology','Fuel')), columns=['Value']).reset_index().fillna(0)\n",
-    "StorageDisCharge = pd.DataFrame(instance.StorageDisCharge.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.StorageDisCharge.extract_values().keys(), names=('Hour','Technology','Fuel')), columns=['Value']).reset_index().fillna(0)\n",
+    "StorageDisCharge = (pd.DataFrame(instance.StorageDisCharge.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.StorageDisCharge.extract_values().keys(), names=('Hour','Technology','Fuel')), columns=['Value']).reset_index().fillna(0))\n",
     "\n",
     "# make sure that the values for Curtailment and Use are negative for our outputs\n",
     "Use['Value']= Use['Value']*-1\n",
@@ -470,7 +473,13 @@
     "# write our output values to csv files in the output subfolder\n",
     "EnergyBalance.to_csv('../3. Output/EnergyBalance.csv',index=False)\n",
     "Capacity.to_csv('../3. Output/Capacity.csv',index=False)\n",
-    "StorageLevel.to_csv('../3. Output/StorageLevel.csv',index=False)"
+    "StorageLevel.to_csv('../3. Output/StorageLevel.csv',index=False)\n",
+    "TotalStorageCapacity.to_csv('../3. Output/TotalStorageCapacity.csv', index=False)\n",
+    "GenerationCapacity.to_csv('../3. Output/GenerationCapacity.csv', index=False)\n",
+    "\n",
+    "#print(TotalCapacity)\n",
+    "#print(TotalStorageCapacity)\n",
+    "#print(GenerationCapacity)\n"
    ]
   },
   {
